# Polyrun

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  setup.py
polyrun/: __init__.py  base.py  detect.py  exceptions.py  pipeline.py
polyrun/examples/: data_passing.py  hello_world.py  pipeline_demo.py
polyrun/runners/: c.py  cpp.py  go.py  java.py  node.py  rust.py
polyrun/tests/: test_suite.py
