[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "polyrun"
version = "0.1.0"
description = "Run and combine Java, Node.js, C, C++, Rust, Go, and JavaScript — all from Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["polyglot", "runner", "java", "nodejs", "javascript", "c", "cpp", "rust", "go", "multiplatform"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Compilers",
]

[project.urls]
Homepage = "https://github.com/your-username/polyrun"
Repository = "https://github.com/your-username/polyrun"
Issues = "https://github.com/your-username/polyrun/issues"

[tool.setuptools.packages.find]
include = ["polyrun*"]
